# hypergraph-spectral-decomposer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  references.md  requirements.txt  setup.py
docs/: choosing_k.md  concepts.md  contributing.md
examples/: basic_usage.py  real_world_usage.py
src/hypergraph_spectral_decomposer/: __init__.py  cli.py  community.py  hypergraph.py  spectral.py
tests/: __init__.py  test_cli.py  test_clustering_consistency.py  test_incidence_and_degrees.py  test_spectral_embedding.py
